# fast-api

./: alembic.ini  main.py  pyproject.toml  sql_app.db
alembic/: env.py
alembic/versions/: afbeb8b2cd69_.py
api/utils/: courses.py
db/: db_setup.py
db/models/: course.py  mixins.py  user.py
